--- a/app/main.scss
+++ b/app/main.scss
@@ -162,7 +162,7 @@ h1.loaded {
 	left: 50%;
 }
 
-.show-notes, .hide-notes, .mute {
+.show-notes, .hide-notes, .mute, .instructions {
 	letter-spacing: 0.2em;
 	transform: translateX(-50%);
 	cursor: pointer;
@@ -179,3 +179,25 @@ h1.loaded {
 .show-notes:hover, .hide-notes:hover {
 	color: #fff;
 }
+
+.instructions {
+	display: inline-block;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	max-width: 90%;
+	transition: opacity 0.5s ease;
+	pointer-events: none;
+}
+
+.instructions--hidden {
+	opacity: 0;
+}
+
+
+
+
+
+
+
